--- a/DataRelatedStudy/src/main/res/layout/activity_main.xml
+++ b/DataRelatedStudy/src/main/res/layout/activity_main.xml
@@ -3,6 +3,6 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".UiMain">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
 </RelativeLayout>
