完成大部分重命名工作；下周开始以添加新功能为主，编辑到的模块再规范命名

--- a/HighQualityCodeStudy/src/main/res/layout/activity_howtousehandler.xml
+++ b/HighQualityCodeStudy/src/main/res/layout/activity_howtousehandler.xml
@@ -9,7 +9,7 @@
     tools:context=".memoryleakhandle.HowToUseHandlerActivity">
 
     <TextView
-        android:id="@+id/sdi_test_tv"
+        android:id="@+id/tv_test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
