--- a/MVCFrameStudy/src/main/res/layout/activity_asyncmvcmemo.xml
+++ b/MVCFrameStudy/src/main/res/layout/activity_asyncmvcmemo.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/sdi_data_tv"
+        android:id="@+id/tv_data"
         style="@android:style/TextAppearance.Large"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
     </LinearLayout>
 
     <ProgressBar
-        android:id="@+id/sdi_loading_pb"
+        android:id="@+id/pb_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:indeterminate="true"
