--- a/MVVMFrameStudy/src/main/res/menu/menu_ui_android_data_binding_demo.xml
+++ b/MVVMFrameStudy/src/main/res/menu/menu_ui_android_data_binding_demo.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.cheng.mvvmstudy.androiddatabinding.ui.activity.UiAndroidDataBindingDemo">
+    tools:context=".androiddatabinding.ui.activity.AndroidDataBindingDemoActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
