--- a/Android5Study/src/main/res/layout/activity_main.xml
+++ b/Android5Study/src/main/res/layout/activity_main.xml
@@ -1,11 +1,39 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/tv_android5apiintroduce"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_android5introduce" />
+    <Button
+        android:id="@+id/btn_android5api"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_android5apiintroduce"
+        android:text="@string/text_android5api"
+        android:textAllCaps="false"
+        android:onClick="onClick"/>
+    <Button
+        android:id="@+id/btn_android5widget"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_android5api"
+        android:text="@string/text_android5widget"
+        android:textAllCaps="false"
+        android:onClick="onClick"/>
 
+    <ImageView
+        android:layout_width="429dp"
+        android:layout_height="81dp"
+        android:id="@+id/iv_minelogo"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/btn_android5widget"
+        android:src="@mipmap/ic_minelogo" />
 </RelativeLayout>
