--- a/Android6Study/src/main/res/layout/activity_dynamicpermission.xml
+++ b/Android6Study/src/main/res/layout/activity_dynamicpermission.xml
@@ -7,41 +7,48 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.diygreen.android6new.MainActivity">
+    tools:context=".newapi.DynamicPermissionActivity">
 
     <TextView
-        android:id="@+id/tv_android6introduce"
+        android:id="@+id/tv_showresult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Android 6.x 介绍" />
-
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Result"
+        android:textAllCaps="false"/>
     <Button
-        android:id="@+id/btn_newfeatures"
+        android:id="@+id/btn_getlocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Android 6 新特性"
-        android:layout_below="@+id/tv_android6introduce"
-        android:layout_alignParentStart="true"
-        android:textAllCaps="false"
-        android:onClick="onClick"/>
-
-    <Button
-        android:id="@+id/btn_newapis"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Android  6 新 API"
-        android:layout_below="@+id/btn_newfeatures"
-        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tv_showresult"
+        android:text="获取位置"
         android:textAllCaps="false"
         android:onClick="onClick" />
 
     <Button
-        android:id="@+id/btn_newwidgets"
+        android:id="@+id/btn_testsdcardpermission"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Android 6 新控件"
-        android:layout_below="@+id/btn_newapis"
+        android:text="SD卡读写权限"
+        android:layout_below="@+id/btn_getlocation"
         android:layout_alignParentStart="true"
+        android:onClick="onClick" />
+    <Button
+        android:id="@+id/btn_testaudiopermission"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="录音相关权限"
+        android:layout_below="@+id/btn_testsdcardpermission"
         android:textAllCaps="false"
         android:onClick="onClick" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/switch_checkpermission"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:checked="false" />
+
+
 </RelativeLayout>
